--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ header {
   transition: top 0.4s ease-in-out;
   width: 50%;
 }
-.modalHeader {
+.modalHead {
   font-weight: 700;
   padding: 0.6rem;
   text-align: center;
